--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,10 +2,20 @@
   display: grid;
   grid-template-columns: 3fr 1fr;
   gap: 1rem;
+  align-items: start;
 }
 
 .App nav {
   grid-column: 1/-1;
+  padding: 1rem;
+  display: flex;
+  gap: 3rem;
+  padding-left: 2rem;
+  background-color: lightblue;
+}
+
+.App nav a {
+  color: rgb(1, 1, 41);
 }
 
 .App > * {
