--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,15 @@ img {
   width: 20rem;
 }
 
+#product_app {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  gap: 1rem;
+  align-items: start;
+}
+
 .ProductList {
+  grid-column: 1/2;
   overflow: hidden;
   margin-top: 2rem;
   display: grid;
@@ -76,6 +84,7 @@ img {
   top: 6.4rem;
   align-self: start;
   padding: 1rem;
+  border: 1px solid darkviolet;
 }
 
 .Form form {
